[project]
name = "hciip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scipy>=1.16.1",
    "streamlit>=1.48.0",
    
]
[tool.poetry]
name = "hciip"
version = "0.1.0"
description = ""
authors = ["Behrooz Bashokooh <behrooz.bashokooh@gmail.com>"]
package-mode = false
license = "MIT"
